I have updated the file code to match file names

--- a/Exclusives.html
+++ b/Exclusives.html
@@ -16,9 +16,9 @@
             <!-- this only applies to the landing page menu, creates the navigation bar and icons which I can then style-->
             <section class="landing-page-menu">
                 <a href="index.html"><i class="fa fa-fw fa-home"></i> Home</a>
-                <a href="about us.html"><i class="fa fa-fw fa-user"></i> About us</a>
-                <a href="Streetwear's evolution.html"><i class="fas fa-vest-patches"></i> Streetwear's evolution</a>
-                <a href="come to the hub.html"><i class="fas fa-map-pin"></i> Come to the hub</a>
+                <a href="about-us.html"><i class="fa fa-fw fa-user"></i> About us</a>
+                <a href="Streetwear's-evolution.html"><i class="fas fa-vest-patches"></i> Streetwear's evolution</a>
+                <a href="come-to-the-hub.html"><i class="fas fa-map-pin"></i> Come to the hub</a>
                 <a class="active" href="Exclusives.html"><i class="fas fa-fire"></i> Exclusives</a>
             </section>  
                 
