--- a/come to the hub.html
+++ b/come to the hub.html
@@ -9,7 +9,7 @@
      <meta name="keywords" content="creative, fashion, street culture, photography, street art, creatives club, creatives hub,location,london,england, safe space, creative space">
       
      <!-- links my css and html pages--> 
-     <link rel="stylesheet" href="Style/come to the hub.css" type="text/css" />
+     <link rel="stylesheet" href="Style/come-to-the-hub.css" type="text/css" />
 
      <!-- this allows me to import icons from font awseome and fonts from google fonts -->
      <script src="https://kit.fontawesome.com/6e65cbaf0a.js" crossorigin="anonymous"></script>
@@ -18,9 +18,9 @@
         <!-- This only applies to the landing page menu, creates the navigation bar and icons which I can then style-->
         <section class="landing-page-menu">
              <a href="index.html"><i class="fa fa-fw fa-home"></i> Home</a>
-             <a href="about us.html"><i class="fa fa-fw fa-user"></i> About us</a>
-             <a href="Streetwear's evolution.html"><i class="fas fa-vest-patches"></i> Streetwear's evolution</a>
-             <a class="active" href="come to the hub.html"><i class="fas fa-map-pin"></i> Come to the hub</a>
+             <a href="about-us.html"><i class="fa fa-fw fa-user"></i> About us</a>
+             <a href="Streetwear's-evolution.html"><i class="fas fa-vest-patches"></i> Streetwear's evolution</a>
+             <a class="active" href="come-to-the-hub.html"><i class="fas fa-map-pin"></i> Come to the hub</a>
              <a href="Exclusives.html"><i class="fas fa-fire"></i> Exclusives</a>
         </section>      
     </Head>
