--- a/index.html
+++ b/index.html
@@ -24,9 +24,9 @@
       <!-- this applies to the landing page menu and allows me to create the buttons with icons and link them to the relevant pages. This section of code also allows me to use css to style the menu only --> 
       <section class="landing-page-menu">
           <a class="active" href="index.html"><i class="fa fa-fw fa-home"></i> Home</a>
-            <a href="about us.html"><i class="fa fa-fw fa-user"></i> About us</a>
-            <a href="Streetwear's evolution.html"><i class="fas fa-vest-patches"></i> Streetwear's evolution</a>
-            <a href="come to the hub.html"><i class="fas fa-map-pin"></i> Come to the hub</a>
+            <a href="about-us.html"><i class="fa fa-fw fa-user"></i> About us</a>
+            <a href="Streetwear's-evolution.html"><i class="fas fa-vest-patches"></i> Streetwear's evolution</a>
+            <a href="come-to-the-hub.html"><i class="fas fa-map-pin"></i> Come to the hub</a>
             <a href="Exclusives.html"><i class="fas fa-fire"></i> Exclusives</a>
       </section>
    </head>
