--- a/Streetwear's evolution.html
+++ b/Streetwear's evolution.html
@@ -9,7 +9,7 @@
          <meta name="keywords" content="creative, fashion, street culture, photography, street art, creatives club, creatives hub, streetwears evolution, streetwear cross over, luxury streetwear, 90s asthetic">
 
          <!-- links my css and html pages--> 
-         <link rel="stylesheet" href="Style/Streetwear's evolution.css" type="text/css" />
+         <link rel="stylesheet" href="Style/Streetwear's-evolution.css" type="text/css" />
 
          <!-- this allows me to import icons from font awseome and fonts from google fonts -->
          <link href="https://fonts.googleapis.com/css2?family=Rowdies&family=Work+Sans:wght@300;600&display=swap" rel="stylesheet">
@@ -18,9 +18,9 @@
          <!-- this only applies to the landing page menu. creates the navigation bar and icons which I can then style-->
             <section class="landing-page-menu">
                  <a href="index.html"><i class="fa fa-fw fa-home"></i> Home</a>
-                 <a href="about us.html"><i class="fa fa-fw fa-user"></i> About us</a>
-                 <a class="active" href="Streetwear's evolution.html"><i class="fas fa-vest-patches"></i> Streetwear's evolution</a>
-                 <a href="come to the hub.html"><i class="fas fa-map-pin"></i> Come to the hub</a>
+                 <a href="about-us.html"><i class="fa fa-fw fa-user"></i> About us</a>
+                 <a class="active" href="Streetwear's-evolution.html"><i class="fas fa-vest-patches"></i> Streetwear's evolution</a>
+                 <a href="come-to-the-hub.html"><i class="fas fa-map-pin"></i> Come to the hub</a>
                  <a href="Exclusives.html"><i class="fas fa-fire"></i> Exclusives</a>
             </section> 
             
