--- a/about us.html
+++ b/about us.html
@@ -8,7 +8,7 @@
          <meta name="keywords" content="creative, fashion, street culture, photography, street art, creatives club, creatives hub, streetwears evolution, creative space, about us">
 
       <!-- links my css and html pages--> 
-      <link rel="stylesheet" href="Style/about us.css" type="text/css"/>
+      <link rel="stylesheet" href="Style/about-us.css" type="text/css"/>
 
       <!-- this allows me to import icons from font awseome and fonts from google fonts -->
       <script src="https://kit.fontawesome.com/6e65cbaf0a.js" crossorigin="anonymous"></script>
@@ -17,9 +17,9 @@
       <!-- this only applies to the landing page menu, creates the navigation bar and icons which I can then style-->
       <section class="landing-page-menu">
           <a href="index.html"><i class="fa fa-fw fa-home"></i> Home</a>
-          <a class="active" href="about us.html"><i class="fa fa-fw fa-user"></i> About us</a>
-          <a href="Streetwear's evolution.html"><i class="fas fa-vest-patches"></i> Streetwear's evolution</a>
-          <a href="come to the hub.html"><i class="fas fa-map-pin"></i> Come to the hub</a>
+          <a class="active" href="about-us.html"><i class="fa fa-fw fa-user"></i> About us</a>
+          <a href="Streetwear's-evolution.html"><i class="fas fa-vest-patches"></i> Streetwear's evolution</a>
+          <a href="come-to-the-hub.html"><i class="fas fa-map-pin"></i> Come to the hub</a>
           <a href="Exclusives.html"><i class="fas fa-fire"></i> Exclusives</a>
       </section>
     </head>
@@ -34,7 +34,7 @@
               <h1 class="header"> Our Mission</h1>
               <br><br>
               <p class = "margin"> Vibe Tribe is a hub for all creatives, influnced by and/or influincing street culture fashion. We have created a space for creatives, to collaborate as a collective, and hang out. No stress just vibes.
-                               If you consider yourself a creative <a href="come to the hub.html" target="_blank" class="links">join us</a> on the day(s) convenient for you.  As well as our 24hr project space we will be hosting a range of activities through out the week.
+                               If you consider yourself a creative <a href="come-to-the-hub.html" target="_blank" class="links">join us</a> on the day(s) convenient for you.  As well as our 24hr project space we will be hosting a range of activities through out the week.
                                <a href="Exclusives.html" target="_blank" class="links">Sign up</a> for exclusive events and updates.
               </p>
               <br><br>
