I have update the links between all the pages after removing spaces in page names

--- a/Information pages/Basketball.html
+++ b/Information pages/Basketball.html
@@ -7,7 +7,7 @@
          <meta name="viewport" content="width=device-width, initial-scale=1.0">
  
          <!-- links my css and html pages--> 
-         <link rel="stylesheet" href="../Style/Streetwear's evolution.css" type="text/css" />
+         <link rel="stylesheet" href="../Style/Streetwear's-evolution.css" type="text/css" />
  
          <!-- this allows me to import icons from font awseome and fonts from google fonts -->
          <link href="https://fonts.googleapis.com/css2?family=Rowdies&family=Work+Sans:wght@300;600&display=swap" rel="stylesheet">
