--- a/Information pages/Haute.Coture.html
+++ b/Information pages/Haute.Coture.html
@@ -6,7 +6,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
         <!-- links my css and html pages--> 
-        <link rel="stylesheet" href="../Style/Streetwear's evolution.css" type="text/css" />
+        <link rel="stylesheet" href="../Style/Streetwear's-evolution.css" type="text/css" />
 
         <!-- this allows me to import icons from font awseome and fonts from google fonts -->
         <link href="https://fonts.googleapis.com/css2?family=Rowdies&family=Work+Sans:wght@300;600&display=swap" rel="stylesheet">
@@ -14,11 +14,12 @@
      <body style="background-color:rgb(177, 156, 217); " class="text">
         <h1 class="Font"><strong>Haute Coture</strong></h1><br><br>
 
-          <p class="WorkSans"> The 80s were crucial to Streetwear, <a href="https://en.wikipedia.org/wiki/Haute_couture" class="links" aria-label="click to find out the defintion of Haute Coture"> Haute Coture</a> crossover which created streewear as we know it today. With brands like Supreme with roots in skate culutre reaching $1billion valuation in 2017 and collaborating with the likes of Louis Vuitton. High end designers collaborating with streetwear brands has become common with High end designers collaborating with streetwear brands has become increasing common. Especislly since Virgol abloh’s off-white collobarations with LV,  & Japanese streetwear brands like CDG helping to bring streetwear to the heart of ‘high end’ fashion. Street culture will continue to evolve.  If you would like to contribute to its evolution.<strong><a href="Come to the Hub.html" target="_blank"class="links"aria-label="click to visit the come to the hub page">Join us !</a></strong></p>
+          <p class="WorkSans"> The 80s were crucial to Streetwear, <a href="https://en.wikipedia.org/wiki/Haute_couture" target="_blank" class="links" aria-label="click to find out the defintion of Haute Coture"> Haute Coture</a> crossover which created streewear as we know it today. With brands like Supreme with roots in skate culutre reaching $1billion valuation in 2017 and collaborating with the likes of Louis Vuitton. High end designers collaborating with streetwear brands has become common with High end designers collaborating with streetwear brands has become increasing common. Especislly since Virgol abloh’s off-white collobarations with LV,  & Japanese streetwear brands like CDG helping to bring streetwear to the heart of ‘high end’ fashion. Street culture will continue to evolve.  If you would like to contribute to its evolution.<strong><a href="Come to the Hub.html" target="_blank"class="links"aria-label="click to visit the come to the hub page">Join us !</a></strong></p>
 
              <img src="../Media/dior.jpg" type="jpg" alt="Dior store" width="400px">
 
-          <p class="WorkSans">If you would like to read more about the Haute Coture and streetwear cross over <a href="https://www.vogue.co.uk/article/when-couture-moved-in-on-streetwear" class="links"aria-label="cick here to sign up">click hereto sign up </a> to our mailing lists were we will be giving exlcusives updates and information about upcoming collaborations, drops and events </p>
+          <p class="WorkSans">If you would like to read more about the Haute Coture and streetwear cross over <a href="https://www.vogue.co.uk/article/when-couture-moved-in-on-streetwear" target="_blank" class="links"aria-label="cick here to read more">click here to read more. </a> 
+          <p class="WorkSans"><a href="/Exclusives.html" target="_blank" class="links" aria-label="cick here to sign up to out mailinglist" >Click here to sign up to our mailing list</a> where we will be giving exlcusives updates and information about upcoming collaborations, drops and events </p>
      </body>
      <footer></footer>
 </html>
