I have updated the link for Japanese streetwear

--- a/Streetwear's-evolution.html
+++ b/Streetwear's-evolution.html
@@ -91,7 +91,7 @@
                                              <!-- Flip card header-->
                                             <h1> Japanese Streetwear</h1>
                                              <!-- Flip card text-->
-                                            <p> Japanese streetwear is also known as the Harajuku aesthetic, is very prevalent in global streetwear culture. In the 70s and 80s, Japanese youth began to rebel against the elder's traditions and embrace the western culture. Japanese streetwear is a representation of this defiance and non-conformitism. These themes are still present in streetwear today.<strong><a href="Information pages/Japanese Streetwear.html" target="_blank" class="links">Read More</a></strong></p>
+                                            <p> Japanese streetwear is also known as the Harajuku aesthetic, is very prevalent in global streetwear culture. In the 70s and 80s, Japanese youth began to rebel against the elder's traditions and embrace the western culture. Japanese streetwear is a representation of this defiance and non-conformitism. These themes are still present in streetwear today.<strong><a href="Information pages/Japanese-Streetwear.html" target="_blank" class="links">Read More</a></strong></p>
                                         </div>
                                 </div>
                             </div>
