--- a/index.html
+++ b/index.html
@@ -23,29 +23,29 @@
 
       <!-- this applies to the landing page menu and allows me to create the buttons with icons and link them to the relevant pages. This section of code also allows me to use css to style the menu only --> 
       <section class="landing-page-menu">
-          <a class="active" href="index.html"><i class="fa fa-fw fa-home"></i> Home</a>
-            <a href="about-us.html"><i class="fa fa-fw fa-user"></i> About us</a>
-            <a href="Streetwear's-evolution.html"><i class="fas fa-vest-patches"></i> Streetwear's evolution</a>
-            <a href="come-to-the-hub.html"><i class="fas fa-map-pin"></i> Come to the hub</a>
-            <a href="Exclusives.html"><i class="fas fa-fire"></i> Exclusives</a>
+          <a class="active" ref="index.html" aria-label="Home button"><i class="fa fa-fw fa-home"></i> Home</a>
+            <a href="about-us.html" aria-label="About us button"><i class="fa fa-fw fa-user"></i> About us</a>
+            <a href="Streetwear's-evolution.html" aria-label="Streetwear's evolution button"><i class="fas fa-vest-patches"></i> Streetwear's evolution</a>
+            <a href="come-to-the-hub.html" aria-label="Come to the hub button" ><i class="fas fa-map-pin"></i> Come to the hub</a>
+            <a href="Exclusives.html" aria-label="Exclusives button" ><i class="fas fa-fire"></i> Exclusives</a>
       </section>
    </head>
 
-   <body>
-      <!-- adds the video to the body section of the landing page, making sure it is muted,looped and plays automatically. This part of the code also allows me to style the video using css --> 
-      <video src="Media/MS1 Landing page .mp4" alt="futuristic couple video" type= "video/MP4" muted loop autoplay class="video"></video>
-      <img src="Media/MS1-Landing-page-smaller-screens.jpg" alt="futuristic couple image" class="smaller-screens"></img>
-   </body>
+         <body>
+            <!-- adds the video to the body section of the landing page, making sure it is muted,looped and plays automatically. This part of the code also allows me to style the video using css --> 
+            <video src="Media/Landing-page-video.mp4" muted loop autoplay class="video"></video>
+            <img src="Media/Landing-page-smaller-screens.jpg" alt="futuristic couple image" class="smaller-screens"></img>
+         </body>
 
-   <footer>
-      <!-- allows me to style the footer using css, sets the text that will be visble in the footer and creates a list for the social media icons. floating them to the left and keeping them inline with the footer text--> 
-      <section class="footer"> 
-         <a href="https://www.instagram.com/"class="fa fa-instagram x3 fa-pull-right"  style= "color:rgb(223, 189, 105); text-decoration: none;"></a>
-         <a href="https://www.snapchat.com/l/en-gb/download/"class="fa fa-snapchat x3 fa-pull-right" style= "color:rgb(223, 189, 105) ; text-decoration: none;"></a>
-         <a href="https://www.facebook.com/"class="fa fa-facebook x3 fa-pull-right" style= "color:rgb(223, 189, 105) ; text-decoration: none;"></a>
-         <a href="https://twitter.com/login?lang=en-gb"class="fa fa-twitter x3 fa-pull-right" style="color:rgb(223, 189, 105); text-decoration: none;" ></a>
-          <p>Copyright Brieanna McDonald 2021</p>
-      </section>
-  </footer>
+               <footer>
+                  <!-- allows me to style the footer using css, sets the text that will be visble in the footer and creates a list for the social media icons. floating them to the left and keeping them inline with the footer text--> 
+                  <section class="footer"> 
+                     <a href="https://www.instagram.com/" aria-label="Click to visit instagram" class="fa fa-instagram x3 fa-pull-right"  style= "color:rgb(223, 189, 105); text-decoration: none;"></a>
+                     <a href="https://www.snapchat.com/l/en-gb/download/" aria-label="Click to visit snapchat" class="fa fa-snapchat x3 fa-pull-right" style= "color:rgb(223, 189, 105) ; text-decoration: none;"></a>
+                     <a href="https://www.facebook.com/" aria-label="Click to visit facebook" class="fa fa-facebook x3 fa-pull-right" style= "color:rgb(223, 189, 105) ; text-decoration: none;"></a>
+                     <a href="https://twitter.com/login?lang=en-gb" aria-label="Click to visit twitter" class="fa fa-twitter x3 fa-pull-right" style="color:rgb(223, 189, 105); text-decoration: none;" ></a>
+                     <p>Copyright Brieanna McDonald 2021</p>
+                  </section>
+               </footer>
 </html>
 
