I have added a title to the landing page

--- a/index.html
+++ b/index.html
@@ -15,6 +15,9 @@
       <!-- this allows me to import icons from font awseome and fonts from google fonts --> 
       <script src="https://kit.fontawesome.com/6e65cbaf0a.js" crossorigin="anonymous"></script>
       <link href="https://fonts.googleapis.com/css2?family=Rowdies:wght@300;700&display=swap" rel="stylesheet">
+      
+      <!-- This is the document title vsisible in the tab or browser title bar--> 
+      <title>Vibe Tribe</title>
 
       <!-- this only applies to the landing page menu and adds the logo which I can then style--> 
       <section class="landing-page-header">
