Added title and corrected errors on the about us page

--- a/about-us.html
+++ b/about-us.html
@@ -5,7 +5,7 @@
       <meta charset="UTF-8">
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
       <meta name="description" content="We are a hub for all creatives looking to explore street culture.">
-         <meta name="keywords" content="creative, fashion, street culture, photography, street art, creatives club, creatives hub, streetwears evolution, creative space, about us">
+         <meta name="keywords" content="creative, fashion, street culture, photography, street art, creatives club, creatives hub, streetwears evolution, creative space, about us, Vibe, collective">
 
       <!-- links my css and html pages--> 
       <link rel="stylesheet" href="Style/about-us.css" type="text/css"/>
@@ -14,45 +14,48 @@
       <script src="https://kit.fontawesome.com/6e65cbaf0a.js" crossorigin="anonymous"></script>
       <link href="https://fonts.googleapis.com/css2?family=Rowdies&family=Work+Sans:wght@300;600&display=swap" rel="stylesheet">
 
+      <!-- This is the document title vsisible in the tab or browser title bar--> 
+      <title>About Us</title>
+
       <!-- this only applies to the landing page menu, creates the navigation bar and icons which I can then style-->
       <section class="landing-page-menu">
-          <a href="index.html"><i class="fa fa-fw fa-home"></i> Home</a>
-          <a class="active" href="about-us.html"><i class="fa fa-fw fa-user"></i> About us</a>
-          <a href="Streetwear's-evolution.html"><i class="fas fa-vest-patches"></i> Streetwear's evolution</a>
-          <a href="come-to-the-hub.html"><i class="fas fa-map-pin"></i> Come to the hub</a>
-          <a href="Exclusives.html"><i class="fas fa-fire"></i> Exclusives</a>
+          <a href="index.html" aria-label="Home button"><i class="fa fa-fw fa-home"></i> Home</a>
+          <a class="active" href="about-us.html" aria-label="About us button"><i class="fa fa-fw fa-user"></i> About us</a>
+          <a href="Streetwear's-evolution.html" aria-label="Streetwear's evolution button"><i class="fas fa-vest-patches"></i> Streetwear's evolution</a>
+          <a href="come-to-the-hub.html" aria-label="Come to the hub button"><i class="fas fa-map-pin"></i> Come to the hub</a>
+          <a href="Exclusives.html" aria-label="Exclusives button"><i class="fas fa-fire"></i> Exclusives</a>
       </section>
     </head>
-    <body>
-      <!-- this adds the image to the body of the about us page-->
-         <img src= "Media/Man .png" alt="Young Male" type="png" class="background">
+          <body>
+            <!-- this adds the image to the body of the about us page-->
+              <img src= "Media/Man .png" alt="Young Male" type="png" class="background">
 
-       <!-- this is content for the right half of the background which I will style using css-->
-         <section class="colour">
-              <img src = "Media/Logo.png" alt="Logo" type= "png" width="200" class="logo"/>
-              <br><br>
-              <h1 class="header"> Our Mission</h1>
-              <br><br>
-              <p class = "margin"> Vibe Tribe is a hub for all creatives, influnced by and/or influincing street culture fashion. We have created a space for creatives, to collaborate as a collective, and hang out. No stress just vibes.
-                               If you consider yourself a creative <a href="come-to-the-hub.html" target="_blank" class="links">join us</a> on the day(s) convenient for you.  As well as our 24hr project space we will be hosting a range of activities through out the week.
-                               <a href="Exclusives.html" target="_blank" class="links">Sign up</a> for exclusive events and updates.
-              </p>
-              <br><br>
-              <p2 class= "location">
-                 <strong>Location: 21 Vibe Street, CR3 4TE</strong>
-              </p2>
-              <br><br>
-              <img src="Media/Spiral-nbg.png" alt="Purple Spiral" class="Spiral"/>
-         </section>  
-    </body>
-      <footer>
-        <!-- allows me to style the footer using css, sets the text that will be visble in the footer and creates a list for the social media icons. floating them to the left and keeping them inline with the footer text--> 
-        <section class="footer"> 
-          <a href="https://www.instagram.com/"class="fa fa-instagram x3 fa-pull-right"  style= "color:rgb(223, 189, 105); text-decoration: none;"></a>
-          <a href="https://www.snapchat.com/l/en-gb/download/"class="fa fa-snapchat x3 fa-pull-right" style= "color:rgb(223, 189, 105) ; text-decoration: none;"></a>
-          <a href="https://www.facebook.com/"class="fa fa-facebook x3 fa-pull-right" style= "color:rgb(223, 189, 105) ; text-decoration: none;"></a>
-          <a href="https://twitter.com/login?lang=en-gb"class="fa fa-twitter x3 fa-pull-right" style="color:rgb(223, 189, 105); text-decoration: none;" ></a>
-           <p>Copyright Brieanna McDonald 2021</p>
-      </section>
-    </footer>
+            <!-- this is content for the right half of the background which I will style using css-->
+              <section class="colour">
+                    <img src = "Media/Logo.png" alt="Logo" type= "png" width="200" class="logo"/>
+                    <br><br>
+                    <h1 class="header"> Our Mission</h1>
+                    <br><br>
+                    <p class = "margin"> Vibe Tribe is a hub for all creatives, influnced by and/or influincing street culture fashion. We have created a space for creatives, to collaborate as a collective, and hang out. No stress just vibes.
+                                    If you consider yourself a creative <a href="come-to-the-hub.html" target="_blank" class="links">join us</a> on the day(s) convenient for you.  As well as our 24hr project space we will be hosting a range of activities through out the week.
+                                    <a href="Exclusives.html" target="_blank" class="links">Sign up</a> for exclusive events and updates.
+                    </p>
+                    <br><br>
+                    <p2 class= "location">
+                      <strong>Location: 21 Vibe Street, CR3 4TE</strong>
+                    </p2>
+                    <br><br>
+                    <img src="Media/Spiral-nbg.png" alt="Purple Spiral" class="Spiral"/>
+              </section>  
+          </body>
+              <!-- allows me to style the footer using css, sets the text that will be visble in the footer and creates a list for the social media icons. floating them to the left and keeping them inline with the footer text--> 
+              <footer>
+                  <section class="footer"> 
+                      <a href="https://www.instagram.com/" aria-label="Click to visit instagram" class="fa fa-instagram x3 fa-pull-right"  style= "color:rgb(223, 189, 105); text-decoration: none;"></a>
+                      <a href="https://www.snapchat.com/l/en-gb/download/" aria-label="Click to visit snapchat" class="fa fa-snapchat x3 fa-pull-right" style= "color:rgb(223, 189, 105) ; text-decoration: none;"></a>
+                      <a href="https://www.facebook.com/" aria-label="Click to visit facebook" class="fa fa-facebook x3 fa-pull-right" style= "color:rgb(223, 189, 105) ; text-decoration: none;"></a>
+                      <a href="https://twitter.com/login?lang=en-gb" aria-label="Click to visit twitter" class="fa fa-twitter x3 fa-pull-right" style="color:rgb(223, 189, 105); text-decoration: none;" ></a>
+                      <p>Copyright Brieanna McDonald 2021</p>
+                  </section>
+              </footer>
 </html>
