--- a/about-us.html
+++ b/about-us.html
@@ -28,11 +28,11 @@
     </head>
           <body>
             <!-- this adds the image to the body of the about us page-->
-              <img src= "Media/Man.png" alt="Young Male" type="png" class="background">
+              <img src="Media/Man.png" alt="Young Male" class="background">
 
             <!-- this is content for the right half of the background which I will style using css-->
               <section class="colour">
-                    <img src = "Media/Logo.png" alt="Logo" type= "png" width="200" class="logo"/>
+                    <img src="Media/Logo.png" alt="Logo" width="200" class="logo"/>
                     <br><br>
                     <h1 class="header"> Our Mission</h1>
                     <br><br>
