--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
       <!-- this applies to the landing page menu and allows me to create the buttons with icons and link them to the relevant pages. This section of code also allows me to use css to style the menu only --> 
       <section class="landing-page-menu">
-          <a class="active" ref="index.html" aria-label="Home button"><i class="fa fa-fw fa-home"></i> Home</a>
+          <a class="active" href="index.html" aria-label="Home button"><i class="fa fa-fw fa-home"></i> Home</a>
             <a href="about-us.html" aria-label="About us button"><i class="fa fa-fw fa-user"></i> About us</a>
             <a href="Streetwear's-evolution.html" aria-label="Streetwear's evolution button"><i class="fas fa-vest-patches"></i> Streetwear's evolution</a>
             <a href="come-to-the-hub.html" aria-label="Come to the hub button" ><i class="fas fa-map-pin"></i> Come to the hub</a>
