--- a/about-us.html
+++ b/about-us.html
@@ -48,14 +48,12 @@
                     <img src="Media/Spiral-nbg.png" alt="Purple Spiral" class="Spiral"/>
               </section>  
           </body>
-              <!-- allows me to style the footer using css, sets the text that will be visble in the footer and creates a list for the social media icons. floating them to the left and keeping them inline with the footer text--> 
-              <footer>
-                  <section class="footer"> 
+                    <!-- allows me to style the footer using css, sets the text that will be visble in the footer and creates a list for the social media icons. floating them to the left and keeping them inline with the footer text-->
+                <footer class="footer">  
                       <a href="https://www.instagram.com/" aria-label="Click to visit instagram" class="fa fa-instagram x3 fa-pull-right"  style= "color:rgb(223, 189, 105); text-decoration: none;"></a>
                       <a href="https://www.snapchat.com/l/en-gb/download/" aria-label="Click to visit snapchat" class="fa fa-snapchat x3 fa-pull-right" style= "color:rgb(223, 189, 105) ; text-decoration: none;"></a>
                       <a href="https://www.facebook.com/" aria-label="Click to visit facebook" class="fa fa-facebook x3 fa-pull-right" style= "color:rgb(223, 189, 105) ; text-decoration: none;"></a>
                       <a href="https://twitter.com/login?lang=en-gb" aria-label="Click to visit twitter" class="fa fa-twitter x3 fa-pull-right" style="color:rgb(223, 189, 105); text-decoration: none;" ></a>
                       <p>Copyright Brieanna McDonald 2021</p>
-                  </section>
-              </footer>
+                </footer>
 </html>
