--- a/Information pages/Hip-Hop.html
+++ b/Information pages/Hip-Hop.html
@@ -1,24 +1,27 @@
 <!DOCTYPE html>
 <html lang="en">
-     <head> 
-        <!-- metda data for the code--> 
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+      <head> 
+         <!-- metda data for the code--> 
+         <meta charset="UTF-8">
+         <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-        <!-- links my css and html pages--> 
-        <link rel="stylesheet" href="../Style/Streetwear's-evolution.css" type="text/css" />
+         <!-- links my css and html pages--> 
+         <link rel="stylesheet" href="../Style/Streetwear's-evolution.css" type="text/css" />
 
-        <!-- this allows me to import icons from font awseome and fonts from google fonts -->
-        <link href="https://fonts.googleapis.com/css2?family=Rowdies&family=Work+Sans:wght@300;600&display=swap" rel="stylesheet">
-     </head>
-     <body style="background-color:rgb(177, 156, 217);" class="text">
-        <h1 class="Font"><strong>Hip-Hop</strong></h1><br><br>
+         <!-- this allows me to import icons from font awseome and fonts from google fonts -->
+         <link href="https://fonts.googleapis.com/css2?family=Rowdies&family=Work+Sans:wght@300;600&display=swap" rel="stylesheet">
 
-        <p class="WorkSans">Hip-Hop started in the 70s and as it gained popularity, people began to embrace the new style of fashion that was created alongside it. By the 90s Hip-Hop had popularised streetwear moving it from a subsector of fashion to a mainstream trend. During the 90s Hip-Hop icons like Tupac & TLC can be seen wearing brands such as Dickies, Timberlands, Tommy Hilfiger & Karl Karni. This was the beginning of designer brands catering to the street culture aesthetic.<br><br> Hip-Hop continues to contribute to fashion, particularly street culture. The 90s asthetic is currently on trend and was heavily influenced by hip hop trends such as overalls, graphics tees and jerseys.</p>
+            <!-- This is the document title vsisible in the tab or browser title bar--> 
+            <title>Hip-Hop</title>
+      </head>
 
-        <br><br><img src= "../Media/hip-hop.jpg" type="jpg" alt="Hip-Hop" width="400px">
-        
-        <p class="WorkSans"><a href= "https://uk.tommy.com/tommy-jeans-x-space-jam-tie-dye-t-shirt-dm0dm12198w02"target="_blank" class="links" aria-label="click to visit the Tommy Hilfiger website">Click here</a> to check out similar relases from Tommy Hilfiger</p>
-     </body>
-     <footer></footer>
+            <body style="background-color:rgb(177, 156, 217);" class="text">
+               <h1 class="Font"><strong>Hip-Hop</strong></h1><br><br>
+
+               <p class="WorkSans">Hip-Hop started in the 70s and as it gained popularity, people began to embrace the new style of fashion that was created alongside it. By the 90s Hip-Hop had popularised streetwear moving it from a subsector of fashion to a mainstream trend. During the 90s Hip-Hop icons like Tupac & TLC can be seen wearing brands such as Dickies, Timberlands, Tommy Hilfiger & Karl Karni. This was the beginning of designer brands catering to the street culture aesthetic.<br><br> Hip-Hop continues to contribute to fashion, particularly street culture. The 90s asthetic is currently on trend and was heavily influenced by hip hop trends such as overalls, graphics tees and jerseys.</p>
+
+               <br><br><img src= "../Media/Hip-Hop.png" type="jpg" alt="Hip-Hop" width="400px">
+               
+               <p class="WorkSans"><a href= "https://uk.tommy.com/tommy-jeans-x-space-jam-tie-dye-t-shirt-dm0dm12198w02"target="_blank" class="links" aria-label="click to visit the Tommy Hilfiger website">Click here</a> to check out similar relases from Tommy Hilfiger</p>
+            </body>
 </html>
