correcting errors on the landing page

--- a/index.html
+++ b/index.html
@@ -1,5 +1,4 @@
 <!DOCTYPE html>
-<!DOCTYPE html>
 <html lang="en">
    <head>
       
@@ -21,7 +20,7 @@
 
       <!-- this only applies to the landing page menu and adds the logo which I can then style--> 
       <section class="landing-page-header">
-          <img src = "Media/Logo.png" alt="Logo" type= "png" width="200" class="logo"/>
+          <img src = "Media/Logo.png" alt="Logo" width="200" class="logo"/>
       </section>
 
       <!-- this applies to the landing page menu and allows me to create the buttons with icons and link them to the relevant pages. This section of code also allows me to use css to style the menu only --> 
