image in the head tag causing error

--- a/index.html
+++ b/index.html
@@ -17,13 +17,12 @@
       
       <!-- This is the document title vsisible in the tab or browser title bar--> 
       <title>Vibe Tribe</title>
-
-      <!-- this only applies to the landing page menu and adds the logo which I can then style--> 
-      <section class="landing-page-header">
-          <img src = "Media/Logo.png" alt="Logo" width="200" class="logo"/>
-      </section>
    </head>
    <body>
+      <!-- this adds the logo which I can then style--> 
+      <section class="landing-page-header">
+            <img src = "Media/Logo.png" alt="Logo" width="200" class="logo">
+      </section>
          <!-- this applies to the landing page menu and allows me to create the buttons with icons and link them to the relevant pages. This section of code also allows me to use css to style the menu only --> 
          <section class="landing-page-menu">
             <a class="active" href="index.html" aria-label="Home button"><i class="fa fa-fw fa-home"></i> Home</a>
