--- a/Streetwear's-evolution.html
+++ b/Streetwear's-evolution.html
@@ -49,14 +49,14 @@
                      <div class="Hip-hop">
                          <div class="Hip-hop-inner">
                             <div class="Hip-hop-front">
-                                <img src="Media/hip-hop.jpg" width= "310px" height="360px" alt="Break dancer">
+                                <img src="Media/hip-hop.jpg" width= "310" height="360" alt="Break dancer">
                             </div>
                                  <!-- Allows me to style the back of the card in css-->
                                  <div class="Hip-hop-back">
                                     <!-- Flip card header-->
                                     <h1> Hip-Hop</h1>
                                      <!-- Flip card text-->
-                                    <p> Hip-Hop started in the 70s and as it gained popularity, people began to embrace the new style of fashion that was created alongside it. By the 90s Hip-Hop had popularised streetwear moving it from a subsector of fashion to a mainstream trend.<strong><a href="Information pages/Hip-Hop.html"target="_blank"class="links">Read More.</a></strong></p>
+                                    <p> Hip-Hop started in the 70s and as it gained popularity, people began to embrace the new style of fashion that was created alongside it. By the 90s Hip-Hop had popularised streetwear moving it from a subsector of fashion to a mainstream trend.<strong><a href="Information pages/Hip-Hop.html" target="_blank" class="links">Read More.</a></strong></p>
                                 </div>
                         </div>
                     </div>
@@ -65,14 +65,14 @@
                     <div class="skating">
                          <div class="skating-inner">
                                  <div class="skating-front">
-                                        <img src="Media/skating.jpg" alt="Skating" width= "309px" height="360px">
+                                        <img src="Media/skating.jpg" alt="Skating" width= "309" height="360">
                                     </div>
                                     <!-- Allows me to style the back of the card in css-->
                                     <div class="skating-back">
                                     <!-- Flip card header-->
                                         <h1> Skating</h1>
                                     <!-- Flip card text-->
-                                        <p> Whilst Hip-Hop is said to have birthed street culture. Skate culture was also a source of influence. ‘Street sports’ such as skating had become increasingly popular by the 80s, with brands Like Stussy catering specifically to skate culture. They both have played a crucial role in developing the 90s aesthetic.<strong><a href="Information pages/Skating.html" target="_blank"class="links">Read More.</a></strong></p>
+                                        <p> Whilst Hip-Hop is said to have birthed street culture. Skate culture was also a source of influence. ‘Street sports’ such as skating had become increasingly popular by the 80s, with brands Like Stussy catering specifically to skate culture. They both have played a crucial role in developing the 90s aesthetic.<strong><a href="Information pages/Skating.html" target="_blank" class="links">Read More.</a></strong></p>
                                 </div>
                         </div>
                     </div> 
@@ -81,7 +81,7 @@
                     <div class="japanese-streetwear">
                         <div class="japanese-streetwear-inner">
                              <div class="japanese-streetwear-front">
-                                <img src="Media/cdg.jpg" alt="Commes Des Garcons Trainers" width= "309px" height="360px">
+                                <img src="Media/cdg.jpg" alt="Commes Des Garcons Trainers" width= "309" height="360">
                              </div>
                                     <!-- Allows me to style the back of the card in css-->
                                     <div class="japanese-streetwear-back">
@@ -100,14 +100,14 @@
                     <div class="basketball">
                          <div class="basketball-inner">
                                 <div class="basketball-front">
-                                    <img src="Media/basketball.jpg" alt="Basketball" width= "310px" height="360px">
+                                    <img src="Media/basketball.jpg" alt="Basketball" width= "310" height="360">
                                 </div>
                                      <!-- Allows me to style the back of the card in css-->
                                      <div class="basketball-back">
                                          <!-- Flip card header-->
                                          <h1> Basketball</h1>
                                          <!-- Flip card text-->
-                                         <p> During the early 80s, there was a growing demand for athletic wear to be worn for the aesthetic. Streetball was also growing in popularity. The Nike Air Jordan 1 brought a lot of controversy to professional basketball, but the shoe was a huge success as a fashion statement and helped Nike to achieve the streetwear status it has today.<strong><a href="Information pages/Basketball.html" target="_blank"class="links">Read More.</a></strong></p>
+                                         <p> During the early 80s, there was a growing demand for athletic wear to be worn for the aesthetic. Streetball was also growing in popularity. The Nike Air Jordan 1 brought a lot of controversy to professional basketball, but the shoe was a huge success as a fashion statement and helped Nike to achieve the streetwear status it has today.<strong><a href="Information pages/Basketball.html" target="_blank" class="links">Read More.</a></strong></p>
                                      </div>
                         </div>
                     </div>
@@ -116,14 +116,14 @@
                     <div class="street-art">
                         <div class="street-art-inner">
                             <div class="street-art-front">
-                                <img src="Media/Street-art.png" width= "309px" height="360px" alt="street art">
+                                <img src="Media/Street-art.png" width= "309" height="360" alt="street art">
                             </div>
                                  <!-- Allows me to style the back of the card in css-->
                                 <div class="street-art-back">
                                      <!-- Flip card header-->
                                      <h1> Street art</h1>
                                      <!-- Flip card text-->
-                                     <p> The early 80s saw other subsections of street culture such as street art also influencing fashion at that time. Artists such as Keith Harring; are recognised for being one of the first street artists to bring their art styles to museums and galleries. Artists like Keith Harring are regarded as street art pioneers.<strong><a href="Information pages/Street-art.html"target="_blank" class="links">Read More.</a></strong></p>
+                                     <p> The early 80s saw other subsections of street culture such as street art also influencing fashion at that time. Artists such as Keith Harring; are recognised for being one of the first street artists to bring their art styles to museums and galleries. Artists like Keith Harring are regarded as street art pioneers.<strong><a href="Information pages/Street-art.html" target="_blank" class="links">Read More.</a></strong></p>
                                 </div>
                         </div>
                     </div>
@@ -132,25 +132,25 @@
                     <div class="haute-coture">
                          <div class="haute-coture-inner">
                              <div class="haute-coture-front">
-                                 <img src="Media/LV-Trainers.jpg" width= "310px" height="360px" alt="Louis Vuitton & Nike Air Jordan 1 Trainers">
+                                 <img src="Media/LV-Trainers.jpg" width= "310" height="360" alt="Louis Vuitton & Nike Air Jordan 1 Trainers">
                              </div>
                                  <!-- Allows me to style the back of the card in css-->
                                  <div class="haute-coture-back">
                                      <!-- Flip card header-->
                                      <h1> Haute Coture</h1>
                                      <!-- Flip card text-->
-                                     <p> The 80s were crucial to Streetwear, Haute Coture crossover which created streewear as we know it today. Street culture will continue to evolve.  If you would like to contribute to its evolution.<strong><a href="Exclusives.html" target="_blank"class="links">Join us !</a></strong>to read more <a href="Information pages/Haute.Coture.html" target="_blank"class="links">click here </a></p> 
+                                     <p> The 80s were crucial to Streetwear, Haute Coture crossover which created streewear as we know it today. Street culture will continue to evolve.  If you would like to contribute to its evolution.<strong><a href="Exclusives.html" target="_blank"class="links">Join us !</a></strong>to read more <a href="Information pages/Haute.Coture.html" target="_blank" class="links">click here </a></p> 
                                  </div>
                              </div>
                         </div>
                 </section> 
                 <section class="pictures">
-                     <a href="Information pages/Hip-Hop.html" target="_blank"class="links"><img src="Media/hip-hop.jpg" alt="Break dancer" width="320px" height="400px"></a>
-                     <a href="Information pages/Skating.html" target="_blank"class="links"><img src="Media/skating.jpg" alt="Skater Skating" width="320px" height="400px"></a>
-                     <a href="Information pages/Japanese Streetwear.html" target="_blank" class="links"><img src="Media/cdg.jpg" alt="Commes Des Garcons Trainers" width="320px" height="400px"></a>
-                     <a href="Information pages/Basketball.html" target="_blank"class="links"><img src="Media/basketball.jpg" alt="basketball" width="320px" height="400px"></a>
-                     <a href="Information pages/Street-art.html" target="_blank" class="links"><img src="Media/Street-art.png" alt="Street-art" width="320px" height="400px"></a>
-                     <a href="Information pages/Haute.Coture.html" target="_blank"class="links"><img src="Media/LV-Trainers.jpg" alt="Louis Vuitton Trainers" width="320px" height="400px"></a>
+                     <a href="Information pages/Hip-Hop.html" target="_blank" class="links"><img src="Media/hip-hop.jpg" alt="Break dancer" width="320" height="400"></a>
+                     <a href="Information pages/Skating.html" target="_blank" class="links"><img src="Media/skating.jpg" alt="Skater Skating" width="320" height="400"></a>
+                     <a href="Information pages/Japanese Streetwear.html" target="_blank" class="links"><img src="Media/cdg.jpg" alt="Commes Des Garcons Trainers" width="320" height="400"></a>
+                     <a href="Information pages/Basketball.html" target="_blank"c lass="links"><img src="Media/basketball.jpg" alt="basketball" width="320" height="400"></a>
+                     <a href="Information pages/Street-art.html" target="_blank" class="links"><img src="Media/Street-art.png" alt="Street-art" width="320" height="400"></a>
+                     <a href="Information pages/Haute.Coture.html" target="_blank" class="links"><img src="Media/LV-Trainers.jpg" alt="Louis Vuitton Trainers" width="320" height="400"></a>
                 </section>
                                         
     </body>
