updated file location

--- a/Streetwear's-evolution.html
+++ b/Streetwear's-evolution.html
@@ -147,7 +147,7 @@
                 <section class="pictures">
                      <a href="Information-pages/Hip-Hop.html" target="_blank" class="links"><img src="Media/hip-hop.jpg" alt="Break dancer" width="320" height="400"></a>
                      <a href="Information-pages/Skating.html" target="_blank" class="links"><img src="Media/skating.jpg" alt="Skater Skating" width="320" height="400"></a>
-                     <a href="Information-pages/Japanese Streetwear.html" target="_blank" class="links"><img src="Media/cdg.jpg" alt="Commes Des Garcons Trainers" width="320" height="400"></a>
+                     <a href="Information-pages/Japanese-Streetwear.html" target="_blank" class="links"><img src="Media/cdg.jpg" alt="Commes Des Garcons Trainers" width="320" height="400"></a>
                      <a href="Information-pages/Basketball.html" target="_blank"c lass="links"><img src="Media/basketball.jpg" alt="basketball" width="320" height="400"></a>
                      <a href="Information-pages/Street-art.html" target="_blank" class="links"><img src="Media/Street-art.png" alt="Street-art" width="320" height="400"></a>
                      <a href="Information-pages/Haute.Coture.html" target="_blank" class="links"><img src="Media/LV-Trainers.jpg" alt="Louis Vuitton Trainers" width="320" height="400"></a>
