I have corrected the footer tag error on all pages

--- a/about-us.html
+++ b/about-us.html
@@ -57,5 +57,6 @@
           <a href="https://twitter.com/login?lang=en-gb" aria-label="Click to visit twitter" class="fa fa-twitter x3 fa-pull-right" style="color:rgb(223, 189, 105); text-decoration: none;" ></a>
           <p>Copyright Brieanna McDonald 2021</p>
       </section>  
-   </footer>  
+    </footer>
+    </body>  
 </html>
