--- a/Information-pages/Hip-Hop.html
+++ b/Information-pages/Hip-Hop.html
@@ -20,7 +20,7 @@
 
                <p class="WorkSans">Hip-Hop started in the 70s and as it gained popularity, people began to embrace the new style of fashion that was created alongside it. By the 90s Hip-Hop had popularised streetwear moving it from a subsector of fashion to a mainstream trend. During the 90s Hip-Hop icons like Tupac & TLC can be seen wearing brands such as Dickies, Timberlands, Tommy Hilfiger & Karl Karni. This was the beginning of designer brands catering to the street culture aesthetic.<br><br> Hip-Hop continues to contribute to fashion, particularly street culture. The 90s asthetic is currently on trend and was heavily influenced by hip hop trends such as overalls, graphics tees and jerseys.</p>
 
-               <br><br><img src= "../Media/Hip-Hop.png" type="jpg" alt="Hip-Hop" width="400px">
+               <br><br><img src= "../Media/Hip-Hop.png" alt="tommy-jeans-x-space-jam-tie-dye-t-shirt" width="400">
                
                <p class="WorkSans"><a href= "https://uk.tommy.com/tommy-jeans-x-space-jam-tie-dye-t-shirt-dm0dm12198w02"target="_blank" class="links" aria-label="click to visit the Tommy Hilfiger website">Click here</a> to check out similar relases from Tommy Hilfiger</p>
             </body>
