I have corrected the errors on the information pages

--- a/Information-pages/Skating.html
+++ b/Information-pages/Skating.html
@@ -10,6 +10,9 @@
 
         <!-- this allows me to import icons from font awseome and fonts from google fonts -->
         <link href="https://fonts.googleapis.com/css2?family=Rowdies&family=Work+Sans:wght@300;600&display=swap" rel="stylesheet">
+        
+        <!-- This is the document title vsisible in the tab or browser title bar--> 
+        <title>Skating</title>
      </head>
      <body style="background-color:rgb(177, 156, 217);"class="text">
         <h1 class="Font"><strong>Skating</strong></h1><br><br>
@@ -18,7 +21,7 @@
 
              <br><br><img src="../Media/Supreme-x-Stone-Island.png" alt="Supreme x Stone Island jacket" width="250"><br><br>
         
-         <p class="WorkSans"><a href= "https://www.stoneisland.co.uk/pages/stone-island-supreme-aw_020-021-colab" target="_blank" class="links" aria-label="read more about the Supreme x Stone Island collaboration">Click here</a> to learn more about the Supreme x Stone Island colab.</a> <br><br> To visit the supreme store <a href="https://www.stoneisland.co.uk/pages/stone-island-supreme-aw_020-021-colab" target="_blank" class="links" aria-label="To visit the Supreme store">click here</a></p>
+         <p class="WorkSans"><a href= "https://www.stoneisland.co.uk/pages/stone-island-supreme-aw_020-021-colab" target="_blank" class="links" aria-label="read more about the Supreme x Stone Island collaboration">Click here</a> to learn more about the Supreme x Stone Island colab.<br><br> To visit the supreme store <a href="https://www.stoneisland.co.uk/pages/stone-island-supreme-aw_020-021-colab" target="_blank" class="links" aria-label="To visit the Supreme store">click here</a></p>
      </body>
      <footer></footer>
 </html>
